--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -25,6 +25,8 @@
               env:
               - name: MYSQL_ROOT_PASSWORD
                 value: password
+              - name: OPERATOR_NAME
+                value: example-mysql-mysql
               volumeMounts:
               - name: mysql-data
                 mountPath: "/var/lib/mysql"
