--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -25,8 +25,12 @@
               env:
               - name: MYSQL_ROOT_PASSWORD
                 value: password
+              - name: POD_NAME
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.name
               - name: OPERATOR_NAME
-                value: example-mysql-mysql
+                value: "example-mysql-mysql"
               volumeMounts:
               - name: mysql-data
                 mountPath: "/var/lib/mysql"
