namespaces changed to mysql

--- a/k8s/mysql-vol.yaml
+++ b/k8s/mysql-vol.yaml
@@ -2,7 +2,7 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: mysql-pv-vol1
-  namespace: default
+  namespace: mysql
   labels:
     type: local
     app: mysql
