--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -29,6 +29,10 @@
                 value: mysqladmin
               - name: MYSQL_ROOT_PASSWORD
                 value: admin123
+              - name: WATCH_NAMESPACE
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.namespace
               - name: POD_NAME
                 valueFrom:
                   fieldRef:
