namespace changed to default

--- a/k8s/mysql-vol.yaml
+++ b/k8s/mysql-vol.yaml
@@ -2,7 +2,7 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: mysql-pv-vol1
-  namespace: mysql
+  namespace: default
   labels:
     type: local
     app: mysql
@@ -19,6 +19,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: mysql-pvc-vol1
+  namespace: default
   labels:
     type: local
     app: mysql
