--- a/k8s/mysql-vol.yaml
+++ b/k8s/mysql-vol.yaml
@@ -2,7 +2,7 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: mysql-pv-vol1
-  namespace: default
+  namespace: mysql
   labels:
     type: local
     app: mysql
@@ -12,6 +12,7 @@ spec:
      storage: 1Gi
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain 
   hostPath:
     path: "/mnt/data"
 ---
@@ -19,7 +20,6 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: mysql-pvc-vol1
-  namespace: default
   labels:
     type: local
     app: mysql
