--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -24,7 +24,18 @@
               - containerPort: 3306
               envFrom: 
                - configMapRef: 
-                  name: mysql-cm           
+                  name: mysql-cm 
+              env:
+              - name: WATCH_NAMESPACE
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.namespace
+              - name: POD_NAME
+                valueFrom:
+                  fieldRef:
+                    fieldPath: metadata.name
+              - name: OPERATOR_NAME
+                value: "example-mysql-mysql"
               volumeMounts:
               - name: mysql-data
                 mountPath: "/mnt/data"
